# struct

./: CLAUDE.md  README.md  hello.py  langgraph.json  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
evals/: README.md  dataset.jsonl  push_prompts.py  results.jsonl  run_eval.py  struct-eval-38500d8d.csv  upload_dataset.py
src/struct_agent/: __main__.py  client.py  graph.py  prompts.py  settings.py  state.py  tools.py
