[project]
name = "struct"
version = "0.1.0"
description = "Agents that interact with structured financial market data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.4",
    "langchain-anthropic>=0.3",
    "langchain-core>=0.3",
    "yfinance>=0.2",
    "pydantic-settings>=2.0",
    "typer>=0.15",
    "rich>=13.0",
    "langgraph-cli[inmem]>=0.4.25",
    "langsmith>=0.8.3",
    "openevals>=0.2.0",
]

[project.scripts]
struct = "struct_agent.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/struct_agent"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
